add cleanup plan to stories

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -1163,6 +1163,12 @@ story:
       - restoration
       - watershed
     order:
+      - url: cleanup
+        zoom: 14
+        spotlight: false
+        basemap: terrain
+        visible_layers:
+          - cleanup
       - url: cso
         zoom: 12
         visible_layers:
