--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -688,7 +688,8 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Add a report to the map!)
+  add_button_label: _(Add Report)
+  story_button_label: _(Explore Stories)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(See All Reports)
   show_map_button_label: _(Show the Map)
@@ -1109,6 +1110,7 @@ pages:
     slug: stories
     name: stories
     start_page: true
+    hide_from_top_bar: true
 
   - title: _(Green Screen)
     slug: greenscreen
