--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -176,13 +176,13 @@ sidebar:
               title: _(Oakland districts)
               visibleDefault: true
 
-    - id: ticker
-      view: ActivityView
-      icon: comments-o
-      activity: true
-      title: _(Activity Stream:)
+    # - id: ticker
+    #   view: ActivityView
+    #   icon: comments-o
+    #   activity: true
+    #   title: _(Activity Stream:)
 
-    - id: reports_legend
+    - id: right-sidebar
       title: _(Community ideas:)
       view: LegendView
       icon: info-circle
@@ -204,7 +204,7 @@ activity:
   enabled: true
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
-  show_in_right_panel: false
+  show_in_right_panel: true
 
   # Place Types
 
