--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -211,6 +211,7 @@ activity:
 place:
   administrators:
     - hadassahdamien
+    - phreethought
   adding_supported: true
   add_button_label: _(Share your idea!)
   # Labels for the buttons that toggle the map and list views
