--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -212,6 +212,7 @@ place:
   administrators:
     - hadassahdamien
     - phreethought
+    - goldpbear
   adding_supported: true
   add_button_label: _(Share your idea!)
   # Labels for the buttons that toggle the map and list views
