update twitter syntax

--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -210,7 +210,7 @@ activity:
 
 place:
   administrators:
-    - hadassahdamien
+    - HadassahDamien
     - phreethought
     - goldpbear
   adding_supported: true
