--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -244,8 +244,8 @@ place_types:
         shadowAnchor: [14, 60]
     - condition: '{{map.zoom}} < 17'
       icon:
-        iconSize: [10, 12]
-        iconAnchor: [5, 12]
+        iconSize: [15, 18]
+        iconAnchor: [7.5, 9]
     - condition: '{{map.zoom}} >= 17'
       icon:
         iconSize: [30, 36]
@@ -582,7 +582,7 @@ sidebar:
 
             - id: restoration
               title: _(Restoration Sites)
-              visibleDefault: true
+              visibleDefault: false
 
             - id: cleanup
               title: _(River Cleanup Plan)
@@ -590,7 +590,7 @@ sidebar:
 
             - id: dirt-corps
               title: _(Dirt Corps sites)
-              visibleDefault: true
+              visibleDefault: false
 
             - id: story-markers
               title: _(Stories)
@@ -1108,6 +1108,7 @@ pages:
   - title: _(Stories)
     slug: stories
     name: stories
+    start_page: true
 
   - title: _(Green Screen)
     slug: greenscreen
