--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "build-js": "webpack -d",
     "build-js-production": "webpack -p",
     "watch-js": "webpack -d --watch",
-    "build-css":  "cat src/base/static/dist/cat-bundle.css | tee src/base/static/dist/bundle.css | gzip > src/base/static/dist/bundle.css.gz",
+    "build-css": "cat src/base/static/dist/cat-bundle.css | tee src/base/static/dist/bundle.css | gzip > src/base/static/dist/bundle.css.gz",
     "build-concat": "node scripts/concat.js",
     "build": "npm run build-scss && npm run build-concat && npm run build-js-production && npm run build-css"
   },
   "dependencies": {
     "compass-importer": "^0.4.1",
+    "dotenv": "^4.0.0",
+    "glob": "^7.1.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
