--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -213,7 +213,7 @@ place:
     - HadassahDamien
     - phreethought
     - goldpbear
-  adding_supported: true
+  adding_supported: false
   add_button_label: _(Share your idea!)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(See full list)
