Activity stream support tweaks
- add config param to disable supports in activity stream
- show place model title in support activity stream items

--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -490,6 +490,7 @@ survey:
       sticky: true
 
 support:
+  show_in_activity_stream: false
   submission_type: support
   submit_btn_text: _(Support)
   response_name: _(support)
