--- a/package.json
+++ b/package.json
@@ -21,30 +21,22 @@
   "scripts": {
     "build-scss": "./scripts/run-node-sass.sh",
     "watch-scss": "./scripts/run-node-sass.sh -w",
-    "start-server": "./src/manage.py runserver",
-    "start": "npm run build-scss && npm run watch-scss & npm run watch-js & npm run start-server",
+    "build-scss-production": "./scripts/run-node-sass.sh -p",
+    "start": "npm run build-scss && npm run watch-scss & npm run watch-js & ./src/manage.py runserver",
     "build-js": "webpack -d",
-    "build-js-production": "webpack -p",
+    "build-js-production": "webpack -p && cat src/base/static/dist/bundle.js | gzip > src/base/static/dist/bundle.js.gz",
     "watch-js": "webpack -d --watch",
     "build-css": "cat src/base/static/dist/cat-bundle.css | tee src/base/static/dist/bundle.css | gzip > src/base/static/dist/bundle.css.gz",
     "build-concat": "node scripts/concat.js",
-    "build": "npm run build-scss && npm run build-concat && npm run build-js-production && npm run build-css"
+    "build": "npm run build-scss-production && npm run build-concat && npm run build-js-production && npm run build-css"
   },
   "dependencies": {
     "compass-importer": "^0.4.1",
     "dotenv": "^4.0.0",
     "glob": "^7.1.1",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
     "node-env-file": "^0.1.7",
     "node-sass": "^4.0.0",
-    "sheetify": "^2.0.3",
     "shelljs": "^0.5.3",
-    "uglifyjs": "^2.4.10",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
