--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "watch-js": "webpack -d --watch",
     "build-css": "cat src/base/static/dist/cat-bundle.css | tee src/base/static/dist/bundle.css | gzip > src/base/static/dist/bundle.css.gz",
     "build-concat": "node scripts/concat.js",
-    "build": "npm run build-scss-production && npm run build-concat && npm run build-js-production && npm run build-css"
+    "build": "NODE_ENV=production npm run build-scss-production && npm run build-concat && npm run build-js-production && npm run build-css"
   },
   "dependencies": {
     "compass-importer": "^0.4.1",
