--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -69,12 +69,6 @@ map:
       attribution: 'Hello World'
       type: basemap
 
-    # - id: restoration
-    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-    #   type: landmark
-    #   sources:
-    #     - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-
     - id: dirt-corps
       type: landmark
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks      
@@ -112,6 +106,15 @@ map:
     - id: air
       type: place
       slug: air
+
+
+    - id: vision
+      type: place
+      slug: vision
+
+    - id: restoration
+      type: place
+      slug: restoration
 
        # WRIA9 watershed
     - id: watershed
@@ -597,7 +600,7 @@ sidebar:
 
             - id: restoration
               title: _(Restoration Sites)
-              visibleDefault: false
+              visibleDefault: true
 
             - id: cleanup
               title: _(River Cleanup Plan)
@@ -610,6 +613,111 @@ sidebar:
             - id: story-markers
               title: _(Stories)
               visibleDefault: false
+
+            - id: trees
+              title: _(Trees!)
+              visibleDefault: false
+
+            - id: air
+              title: _(Air Watch Reports)
+              visibleDefault: false
+
+            - id: vision
+              title: _(Community Vision)
+              visibleDefault: true
+
+        - id: grp-land
+          title: _(Land Data)
+          visibleDefault: false
+          layers:
+              # Land Use
+            - id: landuse
+              title: _(Land use)
+              visibleDefault: false
+
+              # Green Seattle Partnership restoration phases
+            - id: phases
+              title: _(Green Seattle partnership)
+              visibleDefault: false
+
+              # Noxious Weeds
+            - id: noxious-weeds
+              title: _(Noxious Weeds)
+              visibleDefault: false
+
+            - id: cso
+              title: _(Sewer Overflow)
+              visibleDefault: false
+
+              # WRIA9 watershed
+            - id: watershed
+              title: _(Watershed)
+              visibleDefault: false
+
+            - id: zoning
+              title: _(Zoning)
+              visibleDefault: false
+
+        - id: grp-history
+          title: _(Historical Data)
+          visibleDefault: false
+          layers:
+
+              # WMS Original Flow
+            - id: duwamish-original
+              title: _(Original River Path)
+              visibleDefault: false
+
+    - id: ticker
+      view: ActivityView
+      icon: comments-o
+      activity: true
+      title: _(Activity Stream:)
+
+    - id: reports_legend
+      title: _(Community Reports:)
+      view: LegendView
+      icon: info-circle
+      items:
+        - title: _(Observations)
+          image: /static/css/images/markers/marker-observation.png
+          url: /filter/observation
+        - title: _(Ideas)
+          image: /static/css/images/markers/marker-idea.png
+          url: /filter/idea
+        - title: _(Questions)
+          image: /static/css/images/markers/marker-question.png
+          url: /filter/question
+        - title: _(Complaints)
+          image: /static/css/images/markers/marker-complaint.png
+          url: /filter/complaint
+
+activity:
+  # Optional. Activity is supported by default. Set to false to disable.
+  enabled: true
+  # How often to refresh the activity list, in milliseconds.
+  interval: 30000
+  # To show the activity stream in the right panel, set this flag to true.
+  # To also remove it from the leaflet controls, comment out the "id: ticker"
+  # entry in the leaflet control config above.
+  show_in_right_panel: false
+
+  # Place Types
+
+place:
+  adding_supported: true
+  add_button_label: _(Add Report)
+  story_button_label: _(Explore Stories)
+  # Labels for the buttons that toggle the map and list views
+  show_list_button_label: _(See All Reports)
+  show_map_button_label: _(Show the Map)
+  action_text: _(added)
+  title: _(Tell us more...)
+  action_text: _(created)
+  anonymous_name: _(Someone)
+  submit_button_label: _(Put it on the map!)
+
+  location_item_name: location
 
   #### begin dynamic form config ####
   place_detail:
