update to use NPM package

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.0.0",
     "shelljs": "^0.5.3",
     "static-eval": "^1.1.1",
+    "togeojson": "^0.16.0",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
