--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -305,7 +305,7 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-tree.png      
 
-  pledge:
+  stormwater-pledge:
     zoomType: teardropZoomStyle
     rules:
       - condition: 'true'
@@ -316,7 +316,7 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-  pledge2:
+  conservation-pledge:
     zoomType: teardropZoomStyle
     rules:
       - condition: 'true'
@@ -327,7 +327,7 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-  pledge3:
+  wastewater-pledge:
     zoomType: teardropZoomStyle
     rules:
       - condition: 'true'
@@ -551,10 +551,10 @@ sidebar:
           visibleDefault: false
         - id: satellite
           title: _(Satellite View)
-          visibleDefault: false
+          visibleDefault: true
         - id: light
           title: _(Light)
-          visibleDefault: true
+          visibleDefault: false
         - id: outdoor
           title: _(Outdoor)
           visibleDefault: false
@@ -670,13 +670,13 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    - category: pledge
+    - category: stormwater-pledge
       includeOnForm: true
       name: location_type
       dataset: bogtobay
       icon_url: /static/css/images/markers/marker-pledge-3.png
-      value: pledge
-      label: _(Stewardship Pledge)
+      value: stormwater-pledge
+      label: _(Stormwater Pledge)
       fields:
         - name: title
           type: text
@@ -711,13 +711,13 @@ place:
           display_prompt: _( )
           placeholder: _(Enter comments...)
           optional: false
-    - category: pledge2
+    - category: conservation-pledge
       includeOnForm: true
       name: location_type
       dataset: bogtobay
       icon_url: /static/css/images/markers/marker-pledge-4.png
-      value: pledge2
-      label: _(Stewardship Pledge B)
+      value: conservation-pledge
+      label: _(Water Conservation Pledge)
       fields:
         - name: title
           type: text
@@ -731,13 +731,13 @@ place:
           display_prompt: _( )
           placeholder: _(Enter comments...)
           optional: false
-    - category: pledge3
+    - category: wastewater-pledge
       includeOnForm: true
       name: location_type
       dataset: bogtobay
       icon_url: /static/css/images/markers/marker-pledge-5.png
-      value: pledge3
-      label: _(Stewardship Pledge C)
+      value: wastewater-pledge
+      label: _(Wastewater Pledge)
       fields:
         - name: title
           type: text
@@ -1087,11 +1087,12 @@ pages:
     hide_from_top_bar: true
 
 story:
-  dirtcorps:
+  bogtobay:
     tagline: _(Next featured site)
-    default_zoom: 17
+    default_zoom: 18
     default_visible_layers:
       - stories
+      - watershed
     order:
       # - url: dirtcorps
       #   zoom: 15
@@ -1102,10 +1103,20 @@ story:
       #   visible_layers:
       #     - dirt-corps
       #   basemap: terrain
+      - url: longfellow
+        zoom: 14
+        basemap: satellite
       - url: greenroof
         zoom: 18
         basemap: satellite
       - url: bioswale
-      - url: longfellow
-        zoom: 14
-        basemap: light
+        zoom: 18
+      - url: barton
+        spotlight: false
+      - url: watershed
+        zoom: 10
+        spotlight: false
+        panTo:
+          lat: 47.28482
+          lng: -121.74225
+        basemap: outdoor
