comment out max bounds config field, as it seems to change map centering behavior

--- a/src/flavors/pbgreensboro/config.yml
+++ b/src/flavors/pbgreensboro/config.yml
@@ -33,7 +33,7 @@ map:
     zoom: 11
     minZoom: 10
     maxZoom: 18
-    maxBounds: [[35.8695775921306, -80.14938354492188], [36.23984280222428, -79.45175170898438]]
+    #maxBounds: [[35.8695775921306, -80.14938354492188], [36.23984280222428, -79.45175170898438]]
   layers:
     - id: osm
       url: http://{s}.tiles.wmflabs.org/hikebike/{z}/{x}/{y}.png
