--- a/src/flavors/pbgreensboro/config.yml
+++ b/src/flavors/pbgreensboro/config.yml
@@ -659,13 +659,14 @@ sidebar:
           layers:
             - id: pbgreensboro
               title: _(Community Reports)
-              visibleDefault: true
+              visibleDefault: true  
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
   enabled: true
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
+  show_in_right_panel: true
 
 place:
   adding_supported: true
