--- a/src/flavors/greensboropb/config.yml
+++ b/src/flavors/greensboropb/config.yml
@@ -22,7 +22,7 @@ map:
   geolocation_enabled: true
   geolocation_onload: false
 
-  geocoding_enabled: true
+  geocoding_bar_enabled: true
   geocoding_engine: Mapbox
   geocode_field_label: _(Enter an address...)
   geocode_hint: [-79.82, 36.07]
@@ -660,6 +660,30 @@ sidebar:
             - id: greensboropb
               title: _(Community Reports)
               visibleDefault: true  
+
+    - id: right-sidebar
+      title: _(Community ideas:)
+      view: LegendView
+      icon: info-circle
+      items:
+        - title: _(Art & Culture)
+          image: /static/css/images/markers/new/fountain.png
+          url: /filter/culture
+        - title: _(Parks & Recreation)
+          image: /static/css/images/markers/new/playground.png
+          url: /filter/parks
+        - title: _(Streets & Sidewalks)
+          image: /static/css/images/markers/new/street-sidewalk.png
+          url: /filter/streets
+        - title: _(Public Health)
+          image: /static/css/images/markers/new/health.png
+          url: /filter/health
+        - title: _(Safety & Environment)
+          image: /static/css/images/markers/new/safety.png
+          url: /filter/safety
+        - title: _(Other)
+          image: /static/css/images/markers/new/idea.png
+          url: /filter/other
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
