--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -738,7 +738,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: wetland
@@ -758,7 +758,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: park
@@ -778,7 +778,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: school
@@ -798,7 +798,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: police
@@ -818,7 +818,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: rail
@@ -838,7 +838,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: town-hall
@@ -858,7 +858,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: danger
@@ -878,7 +878,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: park2
@@ -898,7 +898,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: industrial
@@ -918,7 +918,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: bicycle
@@ -938,7 +938,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: swimming
@@ -958,7 +958,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: theatre
@@ -978,7 +978,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: zoo
@@ -998,7 +998,7 @@ place:
         - name: description
           type: richTextarea
           prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: observation
