--- a/src/flavors/greensboropb/config.yml
+++ b/src/flavors/greensboropb/config.yml
@@ -871,18 +871,95 @@ place:
 
   # define form elements that appear on every form here
   common_form_elements:
-    - name: private-name
+    - name: my_image
+      type: file
+      prompt: _(Image)
+      inputfile_label: _(Add an Image)
+      optional: true
+      attrs:
+        - key: accept
+          value: image/*
+    - name: demographics-header
+      type: section_header
+      horizontal_rule: false
+      content: _(Demographic information)
+    - name: demographics-description
+      type: section_description
+      content: _(This info is kept private, and is to ensure we are serving a diversity of people who best represent the needs of the community.)
+    - name: private-age
+      autocomplete: true
       type: text
-      prompt: _(Your Name (required, will be shown on the map))
-      optional: false
-    - name: private-email
-      prompt: _(Your Email (required, will NOT be shown on the map))
+      prompt: _(Your age:)
+      display_prompt: _()
+      placeholder: _(Your age will not appear on the map)
+      optional: true
+    - name: private-ethnicity
+      autocomplete: true
+      type: checkbox_big_buttons
+      annotation: _(Your ethnicity will not appear on the map)
+      prompt: _(Your ethnicity:)
+      display_prompt: _(Ethnicity:)
+      content:
+        - label: _(American Indian/Alaskan Native)
+          value: indian-alaskan
+        - label: _(Asian)
+          value: asian
+        - label: _(Black or African American)
+          value: black
+        - label: _(Hispanic or Latino/a)
+          value: hispanic
+        - label: _(Native Hawaiian or Pacific Islander)
+          value: hawaiian-pacific
+        - label: _(White)
+          value: white
+        - label: _(Other)
+          value: other
+      optional: true
+    - name: private-income
+      autocomplete: true
+      type: dropdown
+      prompt: _(Your income:)
+      annotation: _(Your income will not appear on the map)
+      content:
+        - label: _(Under $10,000)
+          value: under-10k
+        - label: _($10,000 - $14,999)
+          value: 10k-15k
+        - label: _($15,000 - $24,999)
+          value: 15k-25k
+        - label: _($25,000 - $34,999)
+          value: 25k-35k
+        - label: _($35,000 - $49,000)
+          value: 35k-49k
+        - label: _($50,000 - $74,999)
+          value: 50k-75k
+        - label: _($75,000 - $99,000)
+          value: 75k-99k
+        - label: _($100,000 - $149,000)
+          value: 100k-149k
+        - label: _($150,000 or more)
+          value: 150k-or-more
+      optional: true
+    - name: submitter_name
+      autocomplete: true
       type: text
-      optional: false
+      prompt: _(Your name)
+      placeholder: _(Name)
+      optional: true
+    - name: private-submitter_email
+      autocomplete: true
+      type: text
+      prompt: _(Your Email)
+      placeholder: _(Receive email updates on your idea)
+      optional: true
+      sticky: true
     - name: private-phone
-      prompt: _(Your Phone Number (optional, will NOT be shown on the map))
+      autocomplete: true
       type: text
-      optional: false
+      prompt: _(Your phone number:)
+      display_prompt: _()
+      placeholder: _(Your phone number will not appear on the map)
+      optional: true
     - name: private-volunteer
       type: binary_toggle
       prompt: _(I'd like to volunteer as a Budget Delegate)
@@ -895,57 +972,6 @@ place:
       attribution: _(Budget Delegates will meet 6 - 8 times from December through June​ to evaluate project ideas, work with city staff to research the projects and will receive training and support to develop proposals for the ballot.)
     - type: submit
       label: _(Submit!)
-
-    # - name: private-age
-    #   type: text
-    #   prompt: _(Your age)
-    #   display_prompt: _( )
-    #   placeholder: _(Your age will not appear on the map)
-    # - name: private-ethnicity
-    #   type: radio_big_buttons
-    #   annotation: _(Your ethnicity will not appear on the map)
-    #   prompt: _(Your ethnicity:)
-    #   display_prompt: _(Ethnicity:)
-    #   content:
-    #     - label: _(American Indian/Alaskan Native)
-    #       value: indian-alaskan
-    #     - label: _(Asian)
-    #       value: asian
-    #     - label: _(Black or African American)
-    #       value: black
-    #     - label: _(Hispanic or Latino/a)
-    #       value: hispanic
-    #     - label: _(Native Hawaiian or Pacific Islander)
-    #       value: hawaiian-pacific
-    #     - label: _(White)
-    #       value: white
-    #     - label: _(Other)
-    #       value: other
-    #   optional: true
-    # - name: private-income
-    #   type: dropdown
-    #   prompt: _(Your income:)
-    #   annotation: _(Your income will not appear on the map)
-    #   content:
-    #     - label: _(Under $10,000)
-    #       value: under-10k
-    #     - label: _($10,000 - $14,999)
-    #       value: 10k-15k
-    #     - label: _($15,000 - $24,999)
-    #       value: 15k-25k
-    #     - label: _($25,000 - $34,999)
-    #       value: 25k-35k
-    #     - label: _($35,000 - $49,000)
-    #       value: 35k-49k
-    #     - label: _($50,000 - $74,999)
-    #       value: 50k-75k
-    #     - label: _($75,000 - $99,000)
-    #       value: 75k-99k
-    #     - label: _($100,000 - $149,000)
-    #       value: 100k-149k
-    #     - label: _($150,000 or more)
-    #       value: 150k-or-more
-    #   optional: true
 
 survey:
   submission_type: comments
