(hotfix) change value of other ethnicity checkbox on greensboropb flavor
The generic name other conflicts with the form category called other.

--- a/src/flavors/greensboropb/config.yml
+++ b/src/flavors/greensboropb/config.yml
@@ -913,7 +913,7 @@ place:
         - label: _(White)
           value: white
         - label: _(Other)
-          value: other
+          value: other-ethnicity
       optional: true
     - name: private-income
       autocomplete: true
