support embedded image uploads in rich text editor mode

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -714,6 +714,10 @@ place:
   place_detail:
     - category: mapbox
       includeOnForm: false
+      # NOTE: use this flag to prevent attachments from appearing in their usual
+      # place above place detail values. Useful if attachments have been added as
+      # Quill embeds.
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-land_comp.png
@@ -734,6 +738,7 @@ place:
           optional: false
     - category: wetland
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-land_comp.png
@@ -754,6 +759,7 @@ place:
           optional: false
     - category: park
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-parks_comp.png
@@ -774,6 +780,7 @@ place:
           optional: false
     - category: school
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-qual_comp.png
@@ -794,6 +801,7 @@ place:
           optional: false
     - category: police
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-safe_comp.png
@@ -814,6 +822,7 @@ place:
           optional: false
     - category: rail
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-transp_comp.png
@@ -834,6 +843,7 @@ place:
           optional: false
     - category: town-hall
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-hist_comp.png
@@ -854,6 +864,7 @@ place:
           optional: false
     - category: danger
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-construction.png
@@ -874,6 +885,7 @@ place:
           optional: false
     - category: park2
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-heart.png
@@ -894,6 +906,7 @@ place:
           optional: false
     - category: industrial
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-industrial.png
@@ -914,6 +927,7 @@ place:
           optional: false
     - category: bicycle
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-bike.png
@@ -934,6 +948,7 @@ place:
           optional: false
     - category: swimming
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-swimming.png
@@ -954,6 +969,7 @@ place:
           optional: false
     - category: theatre
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-art.png
@@ -974,6 +990,7 @@ place:
           optional: false
     - category: zoo
       includeOnForm: false
+      suppressAttachments: true
       name: location_type
       dataset: restoration
       icon_url: /static/css/images/markers/marker-whale.png
@@ -1023,23 +1040,6 @@ place:
               value: litter
             - label: _(Other)
               value: other
-          optional: true # NOTE: checkbox_big_button inputs have no validation
-        - name: pollution_type_2
-          type: radio_big_buttons
-          autocomplete: true
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
-          content:
-            - label: _(Sewage)
-              value: sewage2
-            - label: _(Tires)
-              value: tires2
-            - label: _(Illegal dumpsite)
-              value: dumpsite2
-            - label: _(Litter)
-              value: litter2
-            - label: _(Other)
-              value: other2
           optional: true # NOTE: checkbox_big_button inputs have no validation
         - name: reside_work_georgetown
           type: binary_toggle
